# Openclaw-Launcher

./: .gitignore  README.md  clawd_config.json  clawdbot_start.py  clawdbot_start.pyw  launcher_config.json  openclaw_launcher.py  openclawdatamanager.py
flutter_application_1/openclaw_dashboard/: README.md  pubspec.yaml
flutter_application_1/openclaw_dashboard/android/app/: build.gradle.kts
flutter_application_1/openclaw_dashboard/ios/Runner/: Info.plist
flutter_application_1/openclaw_dashboard/ios/Runner.xcodeproj/: project.pbxproj
flutter_application_1/openclaw_dashboard/lib/: main.dart
flutter_application_1/openclaw_dashboard/web/: index.html  manifest.json
flutter_application_1/openclaw_dashboard/windows/runner/: Runner.rc  main.cpp
openclaw launcher/: README.md  analysis_options.yaml
openclaw launcher/lib/: main.dart
openclaw launcher/linux/runner/: my_application.cc
openclaw launcher/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
openclaw launcher/macos/Runner/Configs/: AppInfo.xcconfig
openclaw launcher/openclaw_dashboard/: .gitignore  analysis_options.yaml  pubspec.yaml
openclaw launcher/openclaw_dashboard/lib/: main.dart
openclaw launcher/openclaw_dashboard/linux/: CMakeLists.txt
openclaw launcher/openclaw_dashboard/macos/Runner.xcodeproj/: project.pbxproj
openclaw launcher/openclaw_dashboard/windows/runner/: main.cpp
openclaw launcher/windows/: CMakeLists.txt
openclaw launcher/windows/runner/: flutter_window.cpp  flutter_window.h
openclaw_dashboard/: Cargo.toml
openclaw_dashboard/src/: main.rs
(+2 files in other folders)
