[package]
name = "openclaw_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心GUI库 (锁定版本以防不兼容)
iced = { version = "0.12.1", features = ["tokio", "advanced", "highlighter", "svg", "image"] }

# 异步运行时
tokio = { version = "1.36", features = ["full"] }

# 数据处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# 系统交互 (修复目录报错的关键)
dirs = "5.0"
open = "5.0"
rfd = "0.14"